results/scraper/gitlab/issues_text/target_missing/host_missing/accel_missing/825
compilation error - "VIRTIO_F_VERSION"
Description of problem:
Encountered problem while "make"

....
`[65/2464] Compiling C object subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o
FAILED: subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o 
cc -m64 -mcx16 -Isubprojects/libvhost-user/libvhost-user.a.p -Isubprojects/libvhost-user -I../subprojects/libvhost-user -fdiagnostics-color=auto -Wall -Winvalid-pch -Werror -std=gnu11 -O2 -g -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wstrict-prototypes -Wredundant-decls -Wundef -Wwrite-strings -Wmissing-prototypes -fno-strict-aliasing -fno-common -fwrapv -Wold-style-declaration -Wold-style-definition -Wtype-limits -Wformat-security -Wformat-y2k -Winit-self -Wignored-qualifiers -Wempty-body -Wnested-externs -Wendif-labels -Wexpansion-to-defined -Wimplicit-fallthrough=2 -Wno-missing-include-dirs -Wno-shift-negative-value -Wno-psabi -fstack-protector-strong -fPIE -pthread -D_GNU_SOURCE -MD -MQ subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o -MF subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o.d -o subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o -c ../subprojects/libvhost-user/libvhost-user.c
../subprojects/libvhost-user/libvhost-user.c: In function 'vu_get_features_exec':
../subprojects/libvhost-user/libvhost-user.c:508:17: error: 'VIRTIO_F_VERSION_1' undeclared (first use in this function); did you mean 'INFLIGHT_VERSION'?
         1ULL << VIRTIO_F_VERSION_1 |
                 ^~~~~~~~~~~~~~~~~~
                 INFLIGHT_VERSION
../subprojects/libvhost-user/libvhost-user.c:508:17: note: each undeclared identifier is reported only once for each function it appears in
../subprojects/libvhost-user/libvhost-user.c: In function 'vu_set_features_exec':
../subprojects/libvhost-user/libvhost-user.c:542:30: error: 'VIRTIO_F_VERSION_1' undeclared (first use in this function); did you mean 'INFLIGHT_VERSION'?
     if (!vu_has_feature(dev, VIRTIO_F_VERSION_1)) {
                              ^~~~~~~~~~~~~~~~~~
                              INFLIGHT_VERSION
../subprojects/libvhost-user/libvhost-user.c: In function 'generate_faults':
../subprojects/libvhost-user/libvhost-user.c:612:13: error: unused variable 'ret' [-Werror=unused-variable]
         int ret;
             ^~~
../subprojects/libvhost-user/libvhost-user.c:611:22: error: unused variable 'dev_region' [-Werror=unused-variable]
         VuDevRegion *dev_region = &dev->regions[i];
                      ^~~~~~~~~~
cc1: all warnings being treated as errors
ninja: build stopped: subcommand failed.
make[1]: *** [Makefile:163: run-ninja] Error 1
make[1]: Leaving directory '/users/oneuser/qemu/qemu/build'
make: *** [GNUmakefile:11: all] Error 2
`
Steps to reproduce:
1. ./configure --prefix=/users/oneuser/qemu/myqemu-1 --enable-kvm  --target-list=x86_64-softmmu 
2. make
3.
Additional information:
Please let me know if more info is needed.
